# advent-of-code-2025

./: Cargo.toml  README.md  new-day.sh
src/: lib.rs  utils.rs
