[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
divan = "0.1.21"
glam = "0.30.9"
itertools = "0.14.0"
miette = { version = "7.6.0", features = ["fancy"] }
nom = "8.0.0"
pathfinding = "4.14.0"
rayon = "1.11.0"
regex = "1.12.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[[bin]]
name = "day1"
bench = false
test = true

[dev-dependencies]
divan = "0.1.21"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[[bin]]
name = "day2"
bench = false
test = true

[[bench]]
name = "day2"
harness = false
path = "src/bin/day2/bench.rs"

[[bin]]
name = "day3"
bench = false
test = true

[[bench]]
name = "day3"
harness = false
path = "src/bin/day3/bench.rs"
